# VK2TG-Forwarder

./: .flake8  .gitignore  README.md  pyproject.toml  setup.cfg  tests.sh  vk2tgforwarder-1.0-py3-none-any.whl
docs/source/: conf.py  messageconverter.rst  modules.rst  vk.rst
forwarder/: bot.py  config  config.py  messageconverter.py  signer.py  vk.py
forwarder/po/en/LC_MESSAGES/: config.po
tests/: test_forwarded_messages_converter.py  test_message_converter.py
