[metadata]
name = vk2tgforwarder
version = 1.0
url = https://github.com/andvch/VK2TG-forwarder

[options]
packages = forwarder
include_package_data = True
install_requires =
	requests==2.25.1
	python-telegram-bot==13.5

[options.entry_points]
console_scripts =
    bot = forwarder.bot:main

[options.package_data]
forwarder = */*/*/config.mo
